--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,4 +31,15 @@ jobs:
     - name: Build and Test with Gradle
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
-        arguments: test
+        arguments: test jacocoTestReport
+    - name: Generate JaCoCo Badge
+      uses: cicirello/jacoco-badge-generator@v2
+      if: ${{ github.ref == 'refs/heads/main' }}
+      with:
+        jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
+        badges-directory: build/reports/jacoco/test/html/badges
+    - name: Publish coverage report to GitHub Pages
+      if: ${{ github.ref == 'refs/heads/main' }}
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+        folder: build/reports/jacoco/test/html
